[package]
name = "beap"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.142"

[dependencies.windows-sys]
version = "0.48.0"
features = [
	"Win32_Foundation",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Kernel",
	"Win32_System_SystemServices",
	"Win32_System_Memory",
	"Win32_System_SystemInformation",
	"Win32_System_ProcessStatus",
	"Win32_Security",
]
